Adding cron job file to app.yaml

--- a/app.yaml
+++ b/app.yaml
@@ -27,7 +27,7 @@ handlers:
 # ----------------------------- (3) Automated, daily : adding facts to datastore files
 # ----------------------------- 	(a) list channels that need checking
 # ----------------------------- 	(b) list programmes that need checking
-# ----------------------------- 	(c) TODO: list series "possibles" per channel
+# ----------------------------- 	(c) list series "possibles" per channel
 # ----------------------------- 		(The idea here is to call the file for each possible 
 # ----------------------------- 		channel from the cron.yaml file)
 # ----------------------------- 	(d) TODO: Search possibles for actual matches
@@ -38,3 +38,5 @@ handlers:
   script: cron-series.py
 - url: /cron/possibles/(.*)
   script: cron-possibles.py?channel=\1
+- url: /cron/emails
+  script: cron-emails.py
